# Rasberry-VideoRegistrator

./: CMakeLists.txt  README.md
Headers/: commandlinereader.hpp  connector.hpp  functions.hpp  io.hpp  storagemanager.hpp  threadpool.hpp  videocaptureclient.hpp  videocapturemanager.hpp
Sources/: commandlinereader.cpp  connector.cpp  main.cpp  storagemanager.cpp  threadpool.cpp  videocaptureclient.cpp  videocapturemanager.cpp
Tests/: CMakeLists.txt  CodeCoverage.cmake
Tests/connector-test/: connector-test.cpp  connector-test.hpp
Tests/storagemanager-test/: storagemanager-test.cpp  storagemanager-test.hpp
Tests/threadpool-test/: threadpool-test.cpp  threadpool-test.hpp
Tests/videocaptureclient-test/: videocaptureclient-test.cpp  videocaptureclient-test.hpp
Tests/videocapturemanager-test/: videocapturemanager-test.cpp  videocapturemanager-test.hpp
